[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.12", features = ["json", "stream", "multipart", "blocking"] }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
tempfile = "3.3.0"
futures = "0.3.25"
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bytes = "1.2.1"
clap = { version = "4.0.18", features = ["derive", "env"] }
tap = "1.0.1"
axum = "0.5.17"
